# pico-net

./: .gitmodules  CMakeLists.txt  README.md  example.c  flash.sh  miner.c  resetall.sh  test.c
comm/: CMakeLists.txt  comm.c  comm.h  comm.pio  fbm.h
mylib/: CMakeLists.txt  mylib.c
sha256/: CMakeLists.txt  sha256.c  sha256.h
stdinit/: CMakeLists.txt  stdinit.c  stdinit.h
stdio_init/: CMakeLists.txt  stdio_init.c  stdio_init.h
